--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -41,6 +41,7 @@
     padding-left: 4rem;
     transform: translateX(-100%);
     position: absolute;
+    top: 0;
     left: -1000px;
     transition: transform 0.10s;
 
@@ -51,7 +52,7 @@
     }
 
     & li {
-      font-size: 5rem;
+      font-size: 4rem;
       margin-bottom: 5rem;
       font-weight: 500;
       letter-spacing: 1rem;
